--- a/CaveStory/mods/settings.ini
+++ b/CaveStory/mods/settings.ini
@@ -1,7 +1,7 @@
 ; This creates a console window along with the main game window.
 ; All debug prints will be visible in this window in real-time.
 ; Good for debugging.
-debug_console = false
+debug_console = true
 
 ; This logs debugging information to 'debug.txt'.
 ; Note, errors will be logged to 'error.txt' regardless of this setting.
